fix z-index

--- a/css/character.css
+++ b/css/character.css
@@ -211,7 +211,7 @@
 	height: 38px;
 	border-radius: 50%;
 	/* animation: spin 30s linear infinite; */
-	z-index: -2;
+	z-index: -3;
 }
 
 .ring_button_icon
@@ -222,6 +222,7 @@
 	width: 38px;
 	height: 38px;
 	border-radius: 50%;
+	z-index: -2;
 	/* background-color: #14181c; */
 }
 .ring_button_helper_left
@@ -240,7 +241,7 @@
 	border-radius: 15px;
 	white-space: nowrap;
 	overflow: hidden;
-	z-index: -3;
+	z-index: -4;
 	transition: left 0.6s, width 0.6s;
 }
 .ring_button_helper_right
@@ -259,7 +260,7 @@
 	border-radius: 15px;
 	white-space: nowrap;
 	overflow: hidden;
-	z-index: -3;
+	z-index: -4;
 	transition: left 0.6s, width 0.6s, background-position-x 0.8s;
 }
 
@@ -384,6 +385,7 @@
 	bottom: 13px;
 	left: 9px;
 	width: 38px;
+	z-index: -2;
 }
 
 /* weapon */
